--- a/debt_manager_frontend/pubspec.yaml
+++ b/debt_manager_frontend/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   intl: ^0.18.1
   flutter_spinkit: ^5.2.0
+  pdf: ^3.11.3
+  printing: ^5.14.2
 
 dev_dependencies:
   flutter_test:
