--- a/debt_manager_frontend/pubspec.yaml
+++ b/debt_manager_frontend/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   pdf: ^3.11.3
   printing: ^5.14.2
   table_calendar: ^3.0.9
+  url_launcher: ^6.2.5
+  share_plus: ^7.2.2
+  path_provider: ^2.1.2
 
 
 dev_dependencies:
@@ -68,9 +71,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
